# sudokuer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: sudoku.h
src/: main.cpp  sudoku.cpp
